--- a/tex/seq64_concepts.tex
+++ b/tex/seq64_concepts.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2016-04-03
+% \update      2016-06-25
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -92,15 +92,24 @@
 \label{subsubsec:concepts_terms_measures_ruler}
 
    \index{measures ruler}
-   The \textsl{measures ruler} is the bar at the top of the Song Editor
-   arrangement window that shows the numbering of the measures in the song.
-   Left and right markers can be dropped on this ruler to set durations to
-   be played, looped, expanded, or collapsed.
+   The \textsl{measures ruler} is the bar at the top of the Pattern Editor
+   and Song Editor windows that shows the numbering of the measures in the
+   song.  Left, right, or end markers can be dropped on this ruler to set
+   durations to be played, looped, expanded, or collapsed.
 
    Note:
    \index{bar indicator}
    The original \textsl{Seq24} documentation calls this item the
    \textsl{bar indicator}.
+
+\subsubsection{Concepts / Terms / event strip}
+\label{subsubsec:concepts_terms_event_strip}
+
+   \index{event strip}
+   The \textsl{event strip} is the bar at the bottom of the Pattern Editor
+   window that shows the location of events in the pattern.
+   For Note On and Note Off events, it is shown in gray to warn the user to be
+   careful in moving these events.
 
 \subsubsection{Concepts / Terms / muted}
 \label{subsubsec:concepts_terms_muted}
@@ -143,6 +152,7 @@
    \textsl{performance} is an organized collection of patterns.
    This layout of patterns is created using the Song Editor, sometimes
    called the "performance editor".
+   This window controls the song playback in "Song Mode".
 
 \subsubsection{Concepts / Terms / port}
 \label{subsubsec:concepts_terms_port}
