--- a/tex/seq64_references.tex
+++ b/tex/seq64_references.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-06-13
+% \update      2016-06-25
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -19,7 +19,7 @@
 \section{References}
 \label{sec:seq64_references}
 
-   The \textsl{Yoshimi} seq24 reference list.
+   The \textsl{Sequencer64} reference list.
 
 \begin{thebibliography}{99}
 
